--- a/source/partials/about.html.erb
+++ b/source/partials/about.html.erb
@@ -1,9 +1,26 @@
 <div class="row my-5">
   <div class="col-12">
-    <div class="container">
-      <div id="about">
-        <h2>About</h2>
-        <p>I'm ....</p>
+    <div class="container" id="about">
+      <div class="text-center">
+        <p>I am an aspiring backend developer with a background in translation and education management. Recently graduated from Le Wagon intensive Web Development bootcamp and built several projects, including the final project: a web app that allows people that are moving apartments to check if their things will fit in the new place.
+          Attentive to detail, adaptable, fast learner.
+          Have been living in Japan for the past 7 years and recently acquired Japanese citizenship.</p>
+      </div>
+      <div id="contact">
+        <div class="d-flex justify-content-center flex-wrap">
+          <div class="button-social d-flex flex-column justify-content-center align-items-center">
+            <i class="fa-solid fa-envelope"></i>
+            <%= mail_to "leddihome@gmail.com", "", class: 'button-social-link' %>
+          </div>
+          <div class="button-social d-flex flex-column justify-content-center align-items-center">
+            <i class="fa-brands fa-github"></i>
+            <%= link_to "", "https://github.com/herah-s/", target: '_blank', class: 'button-social-link' %>
+          </div>
+          <div class="button-social d-flex flex-column justify-content-center align-items-center">
+            <i class="fa-brands fa-linkedin"></i>
+            <%= link_to "", "https://www.linkedin.com/in/rina-iwamine", target: '_blank', class: 'button-social-link' %>
+          </div>
+        </div>
       </div>
     </div>
   </div>
