--- a/source/partials/banner.html.erb
+++ b/source/partials/banner.html.erb
@@ -1,6 +1,6 @@
-<div class="row justify-content-center banner">
-  <div class="col-12 d-flex flex-column justify-content-center align-items-center h-100">
-    <%= image_tag 'placeholder.png', alt: "profile photo", class: 'avatar' %>
-    <h1 class="title-main">Portfolio</h1>
+<div class="column justify-content-center banner">
+  <div class="col-12 d-flex gap-4 justify-content-center align-items-center h-100">
+    <%= image_tag 'avatar.jpg', alt: "profile photo", class: 'avatar-square' %>
+    <h1 class="title-main">Hello there, I'm Rina!</h1>
   </div>
 </div>
