--- a/source/stylesheets/components/_button.scss
+++ b/source/stylesheets/components/_button.scss
@@ -1,7 +1,9 @@
 .button-social {
   padding: 0 16px;
   position: relative;
-  font-size: 20px;
+  font-size: 25px;
+  color: rgb(56, 56, 56);
+
 
   &:hover {
     opacity: 0.7;
