--- a/source/stylesheets/components/_cards.scss
+++ b/source/stylesheets/components/_cards.scss
@@ -1,57 +1,81 @@
 .cards {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 16px;
+  width: 100%;
 }
 
 .card-product {
   overflow: hidden;
-  height: 120px;
-  background: white;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  height: fit-content;
+  width: 100%;
+  height: 300px;
+  border: 1px solid rgb(56, 56, 56);
+  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
+  border-radius: 4px;
 }
 
-.card-product img {
-  height: 100%;
-  width: 160px;
+.card-container img {
+  height: 300px;
+  width: 500px;
   object-fit: cover;
+  object-position: left;
+  border-radius: 4px;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+  margin: 16px 0px 16px 0px;
 }
 
 .card-product h2 {
-  font-size: 16px;
+  font-size: 30px;
   font-weight: bold;
   margin: 0;
 }
 
+.divider {
+  border-bottom: 2px solid rgba(0,0,0,0.2);
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
+
 .card-product p {
-  font-size: 12px;
+  font-size: 15px;
   line-height: 1.4;
   opacity: .7;
   margin-bottom: 0;
-  margin-top: 8px;
 }
 
 .card-product .card-product-infos {
   padding: 16px;
-  &:hover {
-    .external-link {
-      opacity: 1;
-    }
-  }
 }
 
 .external-link {
-  margin-left: 8px;
-  opacity: 0;
-  color: $gray;
+  padding: 4px 4px 4px 4px;
+  background-color: rgb(56, 56, 56);
+  border-radius: 4px;
+  font-size: 14px;
+  line-height: 1.4;
+  opacity: .7;
+  margin-bottom: 0;
+  color: white;
   transition: opacity 1s;
   &:hover {
     cursor: pointer;
-    color: $gray
+    color: white;
+    opacity: .7;
   }
 }
+
+#tools {
+  height: 2.5rem;
+  font-size: 1.5rem;
+  margin: 4px 0px 4px 0px;
+  & .dev-icon {
+    background-color: rgb(56, 56, 56);
+    padding: 4px;
+    color: white;
+    border-radius: 4px;
+  }
+}
+
 
 // Smallest device
 @media (min-width: 100px) and (max-width: 575px) {
@@ -79,7 +103,7 @@
     grid-template-columns: 1fr 1fr;
   }
   .external-link {
-    opacity: 0;
+    opacity: 1;
   }
 }
 
