--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -1,1 +1,6 @@
 // Specific CSS for your home-page
+
+a {
+  text-decoration: none;
+  font-family: 'Atkinson Hyperlegible', "Helvetica", "sans-serif";
+}
