--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -5,4 +5,6 @@
   <%= partial 'partials/about' %>
   <!-- Projects Section -->
   <%= partial 'partials/projects' %>
+  <!-- Socials Section -->
+  <%= partial 'partials/social' %>
 </div>
