--- a/source/partials/banner.html.erb
+++ b/source/partials/banner.html.erb
@@ -1,6 +1,13 @@
 <div class="column justify-content-center banner">
   <div class="col-12 d-flex gap-4 justify-content-center align-items-center h-100">
     <%= image_tag 'avatar.jpg', alt: "profile photo", class: 'avatar-square' %>
-    <h1 class="title-main">Hello there, I'm Rina!</h1>
+    <div>
+      <h1 class="title-main">Hello there, I'm Rina!</h1>
+      <ul class="navbar">
+        <li><a href="#about">About</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div>
   </div>
 </div>
