--- a/source/partials/social.html.erb
+++ b/source/partials/social.html.erb
@@ -7,7 +7,7 @@
           <%= mail_to "leddihome@gmail.com", "", class: 'button-social-link' %>
         </div>
         <div class="button-social d-flex flex-column justify-content-center align-items-center">
-          <i class="fa-brands fa-github"></i>
+          <i class="fa-brands fa-square-github"></i>
           <%= link_to "", "https://github.com/herah-s/", target: '_blank', class: 'button-social-link' %>
         </div>
         <div class="button-social d-flex flex-column justify-content-center align-items-center">
