--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -2,5 +2,14 @@
 
 a {
   text-decoration: none;
+  color: white;
   font-family: 'Atkinson Hyperlegible', "Helvetica", "sans-serif";
+}
+
+#about p {
+  padding: 0;
+}
+
+#about {
+ width: 50vw;
 }
