--- a/source/stylesheets/components/_cards.scss
+++ b/source/stylesheets/components/_cards.scss
@@ -7,16 +7,21 @@
   height: fit-content;
   width: 100%;
   height: 300px;
-  border: 1px solid rgb(56, 56, 56);
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
   border-radius: 4px;
+  background-color: #fbfafa;
+}
+
+.card-container {
+  width: 50vw;
+  margin: 0 auto;
 }
 
 .card-container img {
   height: 300px;
-  width: 500px;
+  width: 300px;
   object-fit: cover;
   object-position: left;
   border-radius: 4px;
