works for mobile

--- a/source/partials/about.html.erb
+++ b/source/partials/about.html.erb
@@ -1,7 +1,7 @@
 <div class="row my-5">
   <div class="col-12">
     <div class="container" id="about">
-      <div class="text-center">
+      <div>
         <p>I am a backend/fullstack developer with a background in translation and education management. Recently graduated from Le Wagon intensive Web Development bootcamp and built several projects, including the final project: a web app that allows people that are moving apartments to check if their things will fit in the new place.
           Attentive to detail, adaptable, fast learner.
           Have been living in Japan for the past 7 years and recently acquired Japanese citizenship.</p>
