--- a/source/partials/projects.html.erb
+++ b/source/partials/projects.html.erb
@@ -5,7 +5,7 @@
         <h1 class="text-center">My Projects</h1>
         <div class="cards">
           <% data.projects.each do |project| %>
-            <div class="card-container d-flex justify-content-start align-items-center gap-2">
+            <div class="card-container gap-2">
               <div><%= image_tag project.image, alt: "project image" %></div>
               <div class="card-product">
                 <div class="card-product-infos w-100">
