--- a/source/stylesheets/components/_avatar.scss
+++ b/source/stylesheets/components/_avatar.scss
@@ -21,3 +21,10 @@
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
 }
+
+@media (min-width: 100px) and (max-width: 575px) {
+  .avatar-square {
+    width: 50px;
+    height: 50px;
+  }
+}
