--- a/source/stylesheets/components/_banner.scss
+++ b/source/stylesheets/components/_banner.scss
@@ -14,3 +14,13 @@
   justify-content: space-evenly;
   align-items: center;
 }
+
+@media (min-width: 100px) and (max-width: 575px) {
+  .navbar {
+    margin: 0;
+  }
+
+  .banner h1 {
+    margin: 0;
+  }
+}
