--- a/source/stylesheets/components/_cards.scss
+++ b/source/stylesheets/components/_cards.scss
@@ -3,7 +3,6 @@
 }
 
 .card-product {
-  overflow: hidden;
   height: fit-content;
   width: 100%;
   height: 300px;
@@ -15,8 +14,11 @@
 }
 
 .card-container {
+  display: flex;
+  justify-content: start;
+  align-items: center;
   width: 50vw;
-  margin: 0 auto;
+  margin: 16px auto;
 }
 
 .card-container img {
@@ -26,7 +28,6 @@
   object-position: left;
   border-radius: 4px;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  margin: 16px 0px 16px 0px;
 }
 
 .card-product h2 {
@@ -46,6 +47,7 @@
   line-height: 1.4;
   opacity: .7;
   margin-bottom: 0;
+  text-align: justify;
 }
 
 .card-product .card-product-infos {
@@ -84,11 +86,19 @@
 
 // Smallest device
 @media (min-width: 100px) and (max-width: 575px) {
-  .cards {
-    grid-template-columns: 1fr;
+  .card-container {
+    flex-direction: column;
+    width: 100%;
+    gap: 8px !important;
   }
-  .external-link {
-    opacity: 1;
+
+  #tools {
+    flex-wrap: wrap;
+  }
+
+  .card-product {
+    height: fit-content;
+    width: 100%;
   }
 }
 
@@ -97,31 +107,25 @@
   .cards {
     grid-template-columns: 1fr;
   }
-  .external-link {
-    opacity: 1;
-  }
 }
 
-// Medium devices (tablets, 768px and up)
-@media (min-width: 768px) {
-  .cards {
-    grid-template-columns: 1fr 1fr;
-  }
-  .external-link {
-    opacity: 1;
-  }
-}
+// // Medium devices (tablets, 768px and up)
+// @media (min-width: 768px) {
+//   .cards {
+//     grid-template-columns: 1fr 1fr;
+//   }
+// }
 
-// Large devices (desktops, 992px and up)
-@media (min-width: 992px) {
-  .cards {
-    grid-template-columns: 1fr 1fr;
-  }
-}
+// // Large devices (desktops, 992px and up)
+// @media (min-width: 992px) {
+//   .cards {
+//     grid-template-columns: 1fr 1fr;
+//   }
+// }
 
-// Extra large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) {
-  .cards {
-    grid-template-columns: 1fr 1fr;
-  }
-}
+// // Extra large devices (large desktops, 1200px and up)
+// @media (min-width: 1200px) {
+//   .cards {
+//     grid-template-columns: 1fr 1fr;
+//   }
+// }
