switched layout to two columns

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,6 +1,6 @@
   <!-- Banner Section -->
 <%= partial 'partials/banner' %>
-<div class="container ">
+<div class="main-container">
   <!-- About Section -->
   <%= partial 'partials/about' %>
   <!-- Projects Section -->
