--- a/source/stylesheets/components/_avatar.scss
+++ b/source/stylesheets/components/_avatar.scss
@@ -28,3 +28,10 @@
     height: 50px;
   }
 }
+
+@media (min-width: 576px) and (max-width: 992px) {
+  .avatar-square {
+    width: 50px;
+    height: 50px;
+  }
+}
