--- a/source/stylesheets/components/_cards.scss
+++ b/source/stylesheets/components/_cards.scss
@@ -1,11 +1,12 @@
 .cards {
   width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
 .card-product {
-  height: fit-content;
+  height: 100%;
   width: 100%;
-  height: 300px;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
@@ -17,13 +18,12 @@
   display: flex;
   justify-content: start;
   align-items: center;
-  width: 50vw;
-  margin: 16px auto;
+  margin: 16px;
 }
 
 .card-container img {
   height: 300px;
-  width: 300px;
+  width: 250px;
   object-fit: cover;
   object-position: left;
   border-radius: 4px;
@@ -90,6 +90,7 @@
     flex-direction: column;
     width: 100%;
     gap: 8px !important;
+    margin: 16px 0px;
   }
 
   #tools {
@@ -100,10 +101,30 @@
     height: fit-content;
     width: 100%;
   }
+
+  .cards {
+    grid-template-columns: 1fr;
+  }
 }
 
 // Small devices (landscape phones, 576px and up)
-@media (min-width: 576px) {
+@media (min-width: 576px)  and (max-width: 992px) {
+  .card-container {
+    flex-direction: column;
+    width: 100%;
+    gap: 8px !important;
+    margin: 16px 0px;
+  }
+
+  #tools {
+    flex-wrap: wrap;
+  }
+
+  .card-product {
+    height: fit-content;
+    width: 100%;
+  }
+
   .cards {
     grid-template-columns: 1fr;
   }
