--- a/source/stylesheets/config/_fonts.scss
+++ b/source/stylesheets/config/_fonts.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible&family=Lato&family=Roboto+Slab&family=STIX+Two+Text&display=swap');
 
 // Define fonts for body and headers
-$body-font: 'STIX Two Text', "Helvetica", "sans-serif";
+$body-font: 'Lato', "Helvetica", "sans-serif";
 $headers-font: 'Atkinson Hyperlegible', "Helvetica", "sans-serif";
 
 // To use a font file (.woff) uncomment following lines
