--- a/source/stylesheets/components/_cards.scss
+++ b/source/stylesheets/components/_cards.scss
@@ -45,8 +45,15 @@
 .card-product p {
   font-size: 15px;
   line-height: 1.4;
-  opacity: .7;
+  opacity: .9;
   margin-bottom: 0;
+  text-align: justify;
+}
+
+.card-product span {
+  font-size: 13px;
+  line-height: 1.4;
+  opacity: .7;
   text-align: justify;
 }
 
