--- a/source/partials/about.html.erb
+++ b/source/partials/about.html.erb
@@ -1,7 +1,9 @@
 <div class="row my-5">
   <div class="col-12">
     <div class="container" id="about">
-      <p>I am a backend/fullstack developer with a background in translation and education management. Recently graduated from Le Wagon intensive Web Development bootcamp and built several projects, including the final project: a web app that allows people that are moving apartments to check if their things will fit in the new place.</p>
+      <p>I am an backend developer with a background in translation and education management. A year and a half ago, while being unfulfilled with my job at the time, I found I really enjoyed coding and building things, so I decided to take the plunge and commit to a career switch.
+        Recently I graduated from Le Wagon intensive Web Development bootcamp, where I built several projects, including the final project: a web app that allows people that are moving apartments to check if their things will fit in the new place.
+        Now I am looking for a backend developer position in order to develop my skills and create or maintain great apps for my company's clients. My previous experience taught my how to works in teams and be adaptable.</p>
     </div>
   </div>
 </div>
