--- a/source/partials/about.html.erb
+++ b/source/partials/about.html.erb
@@ -1,9 +1,12 @@
 <div class="row my-5">
   <div class="col-12">
     <div class="container" id="about">
-      <p>I am an software developer with a background in translation and education management. A year and a half ago, while being unfulfilled with my job at the time, I found I really enjoyed coding and building things, so I decided to take the plunge and commit to a career switch.
-        Recently I graduated from Le Wagon intensive Web Development bootcamp, where I built several projects, including the final project: a web app that allows people that are moving apartments to check if their things will fit in the new place.
-        Now I am looking for a backend developer position in order to develop my skills and create or maintain great apps for my company's clients. My previous experience taught my how to works in teams and be adaptable.</p>
+      <p>I am an software developer with a background in translation and education management. A year and a half ago, while being unfulfilled with my job at the time, I found I really enjoyed coding and building things, so I decided to take the plunge and commit to a career switch.</p>
+      <p>Recently I graduated from Le Wagon intensive Web Development bootcamp, where I built several projects, including the final project: a web app that allows people that are moving apartments to check if their things will fit in the new place.</p>
+      <p>Now I am looking for a backend developer position in order to develop my skills and create or maintain great apps for my company's clients. My previous experience taught me how to works in teams and be adaptable.</p>
+      <br>
+      <p>Here is the video of our Demo Day at Le Wagon, where me and one of my teammates presented our app!</p>
+      <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/I43Ln32OAMs?si=2sqDORdYUsiQD7-I&amp;start=2820" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
   </div>
 </div>
